<resources>
    <string name="app_name">VLRP-android</string>
    <string name="filter_by">Filter By</string>
    <string name="google_maps_key" >
    AIzaSyCH3Q_5rZFrpvh8hfagv7woqq1xuZYqbjA
    </string>

    <string name="new_map_key">AIzaSyD1ADb5vO2elX0KvE9Gb_habjOwe4nFxdA</string>
    <string name="full_name">Full name</string>
    <string name="department">Department</string>
    <string name="institute">Institute</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now"><u>Register Now</u></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="click_here_to_log_in"><u>Click Here to log in</u></string>

    <string-array name="filter_array">
        <item>None</item>
        <item>Favorites</item>
    </string-array>
</resources>
